<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/blue_btn_bg_color" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/blue_btn_bg_color" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_html_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/html_url"
        android:textColor="@color/blue_btn_bg_color" />

    <TextView
        android:id="@+id/html_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_created_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/created_at"
        android:textColor="@color/blue_btn_bg_color" />

    <TextView
        android:id="@+id/created_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_updated_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updated_at"
        android:textColor="@color/blue_btn_bg_color" />

    <TextView
        android:id="@+id/updated_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_pushed_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pushed_at"
        android:textColor="@color/blue_btn_bg_color" />

    <TextView
        android:id="@+id/pushed_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>